# CodingChallengesByJohnCrickett

./: README.md
cpp/WordCount/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cpp/WordCount/cmake/: create_directory.cmake  warnings.cmake
cpp/WordCount/src/: main.cpp
